Corrected test